# MOS-6502

./: .gitignore  CMakeLists.txt
include/: CPU.hpp  Types.hpp
src/: CPU.cpp  main.cpp
test/: test.cpp
